# async-ftdi

./: Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  bar.txt  build.rs  foo.txt  link.sh
examples/: read.rs  request_response.rs  write.rs
src/: lib.rs  waker.rs  waker_linux.rs  waker_windows.rs
