[package]
name = "async-ftdi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "^1", features = ["sync", "time", "rt", "macros", "rt-multi-thread"] }
libftd2xx-ffi = "*"

[dependencies.libftd2xx]
version = "0.32"
features = ["static"]

[target.'cfg(unix)'.dependencies]
libc = "0.2" 